# snake

./: .gitignore  CMakeLists.txt  basics.h  fruit.h  main.cpp  readme.md  snake.h
src/: basics.cpp  basics.h  constants.h  font.h  main.cpp
src/field/: field.cpp  field.h
src/field/fruit/: fruit.cpp  fruit.h
src/field/snake/: snake.cpp  snake.h
